manifests/microservices/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/instance: frontend1
    app.kubernetes.io/part-of: "opa-demo"
    app.kubernetes.io/managed-by: "me-you-and-us"
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: piotrjanik/opa-demo-frontend:latest
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
