manifests/microservices/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app.kubernetes.io/name: orders
    app.kubernetes.io/component: service
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/instance: orders1
    app.kubernetes.io/part-of: "opa-demo"
    app.kubernetes.io/managed-by: "me-you-and-us"
spec:
  selector:
    matchLabels:
      app: orders
  replicas: 1
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: piotrjanik/opa-demo-orders:latest
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: orders
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: orders
